GraphQL program doesn't warn any more, solarthing.sh uses --base